Adding live support chat weavy-sln

--- a/weavy-sdk/src/Web.config
+++ b/weavy-sdk/src/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings file="settings.config" />
   <connectionStrings>
-    <add name="Weavy" connectionString="server=localhost;database=new-weavy;trusted_connection=true;" providerName="System.Data.SqlClient" />
+    <add name="Weavy" connectionString="server=localhost;database=v202112130913;trusted_connection=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -72,7 +72,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.2.0" newVersion="2.4.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
