--- a/weavy-sdk/src/Weavy.csproj
+++ b/weavy-sdk/src/Weavy.csproj
@@ -1,4 +1,4 @@
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <Import Project="..\packages\JavaScriptEngineSwitcher.V8.Native.win-x64.3.1.5\build\JavaScriptEngineSwitcher.V8.Native.win-x64.props" Condition="Exists('..\packages\JavaScriptEngineSwitcher.V8.Native.win-x64.3.1.5\build\JavaScriptEngineSwitcher.V8.Native.win-x64.props')" />
   <Import Project="..\packages\JavaScriptEngineSwitcher.V8.Native.win-x86.3.1.5\build\JavaScriptEngineSwitcher.V8.Native.win-x86.props" Condition="Exists('..\packages\JavaScriptEngineSwitcher.V8.Native.win-x86.3.1.5\build\JavaScriptEngineSwitcher.V8.Native.win-x86.props')" />
@@ -6,7 +6,8 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion></ProductVersion>
+    <ProductVersion>
+    </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{70CFFD0F-7B12-43EC-9C57-9080937A6B04}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -22,7 +23,8 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
-    <NuGetPackageImportStamp></NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -169,11 +171,11 @@
     <Reference Include="Mammoth, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Mammoth.1.4.0.0\lib\net45\Mammoth.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.4.1\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.4.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.4.2\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.4.1\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.4.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.4.2\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.NotificationHubs, Version=3.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.NotificationHubs.3.3.0\lib\netstandard2.0\Microsoft.Azure.NotificationHubs.dll</HintPath>
@@ -364,17 +366,17 @@
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="Weavy.Bundler, Version=8.9.0.0, Culture=neutral, PublicKeyToken=null">
+    <Reference Include="Weavy.Bundler, Version=8.10.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\lib\Weavy.Bundler.dll</HintPath>
     </Reference>
-    <Reference Include="Weavy.Core, Version=8.9.0.0, Culture=neutral, PublicKeyToken=null">
+    <Reference Include="Weavy.Core, Version=8.10.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\lib\Weavy.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Weavy.Web, Version=8.9.0.0, Culture=neutral, PublicKeyToken=null">
+    <Reference Include="Weavy.Web, Version=8.10.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\lib\Weavy.Web.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
-    <Reference Include="wvy, Version=8.9.0.0, Culture=neutral, PublicKeyToken=null">
+    <Reference Include="wvy, Version=8.10.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\lib\wvy.exe</HintPath>
     </Reference>
   </ItemGroup>
@@ -3584,7 +3586,6 @@
     <Content Include="Scripts\vendor\codemirror\htmlmixed.js" />
     <Content Include="Scripts\vendor\codemirror\javascript.js" />
     <Content Include="Scripts\vendor\codemirror\xml.js" />
-    <Content Include="Scripts\vendor\commonmark\commonmark.min.js" />
     <Content Include="Scripts\vendor\corejs-typeahead\typeahead.jquery.min.js" />
     <Content Include="Scripts\vendor\emojione\emojione.js" />
     <Content Include="Scripts\vendor\expanding-textareas\expanding.jquery.js" />
@@ -3592,7 +3593,6 @@
     <Content Include="Scripts\vendor\jquery\jquery.version.js" />
     <Content Include="Scripts\vendor\jquery-textcomplete\jquery.textcomplete.min.js" />
     <Content Include="Scripts\vendor\jquery.idle\jquery.idle.min.js" />
-    <Content Include="Scripts\vendor\jsbridge\mt.js" />
     <Content Include="Scripts\vendor\mousetrap\mousetrap-global-bind.min.js" />
     <Content Include="Scripts\vendor\mousetrap\mousetrap.min.js" />
     <Content Include="Scripts\vendor\overlayscrollbars\jquery.overlayScrollbars.min.js" />
@@ -4314,6 +4314,7 @@
     <Compile Include="Areas\Api\Controllers\SearchController.cs" />
     <Compile Include="Areas\Api\Controllers\SpacesController.cs" />
     <Compile Include="Areas\Api\Controllers\UsersController.cs" />
+    <Compile Include="Areas\Api\Controllers\SupportChatController.cs" />
     <Compile Include="Areas\Apps\Controllers\CommentsController.cs" />
     <Compile Include="Areas\Apps\Controllers\FilesController.cs" />
     <Compile Include="Areas\Apps\Controllers\FolderController.cs" />
@@ -4323,6 +4324,7 @@
     <Compile Include="Areas\Apps\Controllers\SearchController.cs" />
     <Compile Include="Areas\Apps\Controllers\TaskItemController.cs" />
     <Compile Include="Areas\Apps\Controllers\TasksController.cs" />
+    <Compile Include="Areas\Apps\Models\SupportChatIn.cs" />
     <Compile Include="Areas\Apps\Models\Messenger.cs" />
     <Compile Include="Areas\Apps\Models\Notifications.cs" />
     <Compile Include="Areas\Apps\Models\TaskItem.cs" />
@@ -4336,6 +4338,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Areas\Apps\Views\Messenger\_FeedbackModal.cshtml" />
     <None Include="Resources\Resources.txt" />
     <None Include="Resources\Resources.en.txt" />
     <None Include="packages.config" />
@@ -4361,12 +4364,13 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>0</DevelopmentServerPort>
+          <DevelopmentServerPort>65122</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>https://localhost:44323/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl />
+          <CustomServerUrl>
+          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
@@ -4417,7 +4421,7 @@ using System.Reflection%3B
       <Output TaskParameter="AssignedFilesWithCulture" ItemName="ResourcesWithCulture" />
     </AssignCulture>
     <Message Text="%(Culture) -&gt; @(ResourcesWithCulture)" Importance="High" />
-    <MakeDir Directories="@(ResourcesWithCulture-&gt;'bin\%(Culture)\')" />
+    <MakeDir Directories="@(ResourcesWithCulture->'bin\%(Culture)\')" />
     <AL SdkToolsPath="$(SDK40ToolsPath)" EmbedResources="@(ResourcesWithCulture)" TargetType="library" TemplateFile="bin\Weavy.dll" Culture="%(Culture)" OutputAssembly="bin\%(Culture)\Weavy.resources.dll" />
   </Target>
 </Project>
